--- a/index.html
+++ b/index.html
@@ -10,6 +10,52 @@
     <title>Footer</title>
   </head>
   <body>
+  <div class="container">
+    <div class="faq">
+      <h2>Frequently asked questions</h2>
+      <div class="answers">
+        <div class="left_answers">
+          <details class="left_answer">
+            <summary>What is Hack the North?</summary>
+            <p>Admission to Hack the North is completely free. We also provide food and accommodation for the entire event and help out as much as we can with your transportation to and from the University of Waterloo!</p>
+          </details>
+          <details class="left_answer">
+            <summary>Who can participate?</summary>
+            <p>Admission to Hack the North is completely free. We also provide food and accommodation for the entire event and help out as much as we can with your transportation to and from the University of Waterloo!</p>
+          </details>
+          <details class="left_answer" open>
+            <summary>How much does it cost to attend Hack the North?</summary>
+            <p>Admission to Hack the North is completely free. We also provide food and accommodation for the entire event and help out as much as we can with your transportation to and from the University of Waterloo!</p>
+          </details>
+          <details class="left_answer">
+            <summary>How do I get to Hack the North?</summary>
+            <p>Admission to Hack the North is completely free. We also provide food and accommodation for the entire event and help out as much as we can with your transportation to and from the University of Waterloo!</p>
+          </details>
+          <details class="left_answer">
+            <summary>How many people can be on a team?</summary>
+            <p>Admission to Hack the North is completely free. We also provide food and accommodation for the entire event and help out as much as we can with your transportation to and from the University of Waterloo!</p>
+          </details>
+        </div>
+        <div class="right_answers">
+          <details class="right_answer" open>
+            <summary>What if I've never been to a hackathon before?</summary>
+            <p>Hack the North welcomes students of all skill levels. In previous years, 30% of students have attended Hack the North as their first hackathon. We’ll have talks, mentors and workshops to help you with your project; hackathons can be a great place to learn new skills in a short amount of time. Just be eager to learn, and excited to meet lots of awesome people.</p>
+          </details>
+          <details class="right_answer">
+            <summary>Can I start working on my hack before the event?</summary>
+            <p>Hack the North welcomes students of all skill levels. In previous years, 30% of students have attended Hack the North as their first hackathon. We’ll have talks, mentors and workshops to help you with your project; hackathons can be a great place to learn new skills in a short amount of time. Just be eager to learn, and excited to meet lots of awesome people.</p>
+          </details>
+          <details class="right_answer">
+            <summary>What kind of workshops, talks, and activities will there be?</summary>
+            <p>Hack the North welcomes students of all skill levels. In previous years, 30% of students have attended Hack the North as their first hackathon. We’ll have talks, mentors and workshops to help you with your project; hackathons can be a great place to learn new skills in a short amount of time. Just be eager to learn, and excited to meet lots of awesome people.</p>
+          </details>
+          <details class="right_answer">
+            <summary>404: Question Not Found</summary>
+            <p>Hack the North welcomes students of all skill levels. In previous years, 30% of students have attended Hack the North as their first hackathon. We’ll have talks, mentors and workshops to help you with your project; hackathons can be a great place to learn new skills in a short amount of time. Just be eager to learn, and excited to meet lots of awesome people.</p>
+          </details>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="logo">
         <img src="pictures/robogoose4.png" alt="robogoose" />
@@ -67,5 +113,6 @@
         </div>
       </div>
     </footer>
+  </div>
   </body>
 </html>
