--- a/index.html
+++ b/index.html
@@ -9,6 +9,56 @@
   </head>
   <body>
   <div class="container">
+    <div class="leaders">
+
+      <div class="info_leaders">
+        <div class="text_leaders">
+          <h2>Be inspired by industry leaders</h2>
+          <p>Tech leaders come to Hack the North to be judges, to speak, and to be on the ground innovating with hackers. Stay tuned as we confirm more judges closer to the event. Know someone who’d like to speak? Shoot us an email.</p>
+        </div>
+        <img src="pictures/lightbulb.png" alt="">
+      </div>
+
+
+      <div class="leaders_photo">
+        <div class="leader_and_text">
+          <img src="pictures/leaders/leader1.png" alt="">
+          <p>Dylan Field
+            CEO, Figma</p>
+        </div>
+        <div class="leader_and_text">
+          <img src="pictures/leaders/leader2.png" alt="">
+          <p>Danielle Monet
+            Founder, Insightful</p>
+        </div>
+        <div class="leader_and_text">
+          <img src="pictures/leaders/leader3.png" alt="">
+          <p>Connie Yang
+            Designer, Coinbase</p>
+        </div>
+        <div class="leader_and_text">
+          <img src="pictures/leaders/leader4.png" alt="">
+          <p>Thomas Richardson
+            Founder, Zube</p>
+        </div>
+        <div class="leader_and_text">
+          <img src="pictures/leaders/leader5.png" alt="">
+          <p>Chamath Palihapitiya
+            Founder, Social Capital</p>
+        </div>
+        <div class="leader_and_text">
+          <img src="pictures/leaders/leader6.png" alt="">
+          <p>Cat Noone
+            Founder, Iris</p>
+        </div>
+        <div class="leader_and_text">
+          <img src="pictures/leaders/leader7.png" alt="">
+          <p>Mitchell Geere
+            Head of Design, InstaCart</p>
+        </div>
+
+      </div>
+    </div>
     <div class="faq">
       <h2>Frequently asked questions</h2>
       <div class="answers">
